add main method

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = peakina
 description = Pea Kina
 author = Toucan Toco
-author_email = 'dev@toucantoco.com',
+author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
 version = 0.0.1
 license = BSD
