replace tests_require by extras_require so pip can handle them

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,13 @@ install_requires =
     s3fs
     urllib3
     xlrd
-test_requires =
+    tables
+
+[options.extras_require]
+test =
     black
     flake8
+    mypy
     pytest
     pytest-cases
     pytest-cov
