Add caching with expiration (#2)
* add cache parameter to get_df

* handle cache expiration

* add HDFCache

* replace tests_require by extras_require so pip can handle them

* edit codecov token

* full coverage

* add peakina.read_pandas so the example in the README works

* no point to use "expire" field when computing datasource hash

* ftp fetcher :: get all mtimes at once when listdir()

* add cache parameter to DataPool

* bump version

* fix type annotation

* add comments for HDFCache metadata

* add comments for FTPFetcher listdir / get all mtimes at once

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = Pea Kina
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
-version = 0.0.2
+version = 0.1.0
 license = BSD
 classifiers=
     Intended Audience :: Developers
@@ -23,10 +23,15 @@ install_requires =
     s3fs
     urllib3
     xlrd
-test_requires =
+    tables
+
+[options.extras_require]
+test =
     black
     flake8
+    mypy
     pytest
+    pytest-cases
     pytest-cov
     pytest-isort
     pytest-mock
