--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = Pea Kina
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
-version = 0.2.1
+version = 0.2.2
 license = BSD
 classifiers=
     Intended Audience :: Developers
@@ -18,7 +18,7 @@ packages = find:
 install_requires =
     chardet
     jq
-    pandas==0.23.4
+    pandas
     paramiko
     pydantic
     python-slugify
