[mypy] Switch to `strict_optional = True`

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,11 +47,6 @@ test =
 max_line_length = 100
 max-complexity = 10
 
-[tool:pytest]
-testpaths = tests
-addopts = --isort
-filterwarnings = ignore
-
 [isort]
 line_length=100
 known_first_party=peakina
@@ -59,3 +54,11 @@ multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
 combine_as_imports=True
+
+[mypy]
+ignore_missing_imports = True
+
+[tool:pytest]
+testpaths = tests
+addopts = --isort
+filterwarnings = ignore
