--- a/setup.cfg
+++ b/setup.cfg
@@ -17,10 +17,10 @@ classifiers=
 packages = find:
 install_requires =
     chardet
+    fastparquet
     jq
     pandas
     paramiko
-    pyarrow
     pydantic
     python-slugify
     s3fs
