--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,11 @@ install_requires =
     xlrd
     xmltodict
 
+[options.packages.find]
+include =
+    peakina
+    peakina.*
+
 [options.extras_require]
 test =
     black
