[doc] use README to populate long_description package field

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = peakina
-description = Pea Kina
-long_description = Pea Kina
+description = pandas readers on steroids (remote files, glob patterns, cache, etc.)
+long_description = file: README.md
+long-description-content-type = text/markdown; charset=UTF-8
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
