tests :: introduce fixture to spawn docker containers

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,10 +40,12 @@ include =
 [options.extras_require]
 test =
     black
+    docker
     flake8
     flake8-quotes
     isort
     mypy
+    pyyaml
     pytest==5.3.5
     pytest-cases
     pytest-cov
