feature :: introduce s3 bucket with docker container

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,12 +19,14 @@ packages = find:
 install_requires =
     certifi
     chardet
+    docker
     fastparquet
     jq
     pandas
     paramiko
     pydantic
     python-slugify
+    pyyaml
     s3fs
     tables
     urllib3
@@ -48,7 +50,6 @@ test =
     pytest-isort
     pytest-mock
     pytest-rerunfailures
-    pytest-sugar
 
 [flake8]
 max_line_length = 100
