--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -3,6 +3,7 @@ s3:
   environment:
     - SCALITY_ACCESS_KEY_ID=newAccessKey
     - SCALITY_SECRET_ACCESS_KEY=newSecretKey
+    - LOG_LEVEL=trace
   ports:
     - 8000:8000
   volumes:
