[flake8] enforce single quotes

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ include =
 test =
     black
     flake8
+    flake8-quotes
     isort
     mypy
     pytest
@@ -51,6 +52,8 @@ test =
     pytest-sugar
 
 [flake8]
+inline-quotes = single
+multiline-quotes = double
 max_line_length = 100
 max-complexity = 10
 
