use pyjq instead of jq to work on python 3.8
jq is not maintained and doesn't work with python 3.8
(see https://github.com/mwilliamson/jq.py/issues/40)
Let's use another lib to handle jq filters

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers=
     License :: OSI Approved :: BSD License
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 packages = find:
@@ -20,10 +21,10 @@ install_requires =
     certifi
     chardet
     fastparquet
-    jq
     pandas
     paramiko
     pydantic
+    pyjq
     python-slugify
     s3fs
     tables
