use pyjq instead of jq to work on python 3.8
jq is not maintained and doesn't work with python 3.8
(see https://github.com/mwilliamson/jq.py/issues/40)
Let's use another lib to handle jq filters

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,10 @@ install_requires =
     certifi
     chardet
     fastparquet
-    jq
     pandas
     paramiko
     pydantic
+    pyjq
     python-slugify
     s3fs
     tables
