--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long-description-content-type = text/markdown; charset=UTF-8
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
-version = 0.5.1
+version = 0.5.2
 license = BSD
 classifiers=
     Intended Audience :: Developers
@@ -68,8 +68,11 @@ force_grid_wrap=0
 combine_as_imports=True
 
 [mypy]
-ignore_missing_imports = True
 plugins = pydantic.mypy
+follow_imports = silent
+ignore_missing_imports = True
+allow_redefinition = True
+#check_untyped_defs = True
 
 [tool:pytest]
 testpaths = tests
