--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long-description-content-type = text/markdown; charset=UTF-8
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
-version = 0.5.3
+version = 0.5.4
 license = BSD
 classifiers=
     Intended Audience :: Developers
@@ -26,6 +26,7 @@ install_requires =
     pydantic
     pyjq
     python-slugify
+    python-snappy
     s3fs==0.4.0
     tables
     urllib3
