--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ test =
     mypy
     pyyaml
     pytest==5.3.5
-    pytest-cases
+    pytest-cases<2
     pytest-cov
     pytest-mock
     pytest-rerunfailures
