Add python-snappy dependency (needed for some .parquet files) (#37)
* Add python-snappy dependency (needed for some .parquet files)

* add step to install system dependencies in CI

* make format

* pin pytest-cases to older version

* encoding and decimal params does not work for read_excel,
and now throws an error in recent pandas versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long-description-content-type = text/markdown; charset=UTF-8
 author = Toucan Toco
 author_email = dev@toucantoco.com
 url = https://github.com/ToucanToco/peakina
-version = 0.5.3
+version = 0.5.4
 license = BSD
 classifiers=
     Intended Audience :: Developers
@@ -26,6 +26,7 @@ install_requires =
     pydantic
     pyjq
     python-slugify
+    python-snappy
     s3fs==0.4.0
     tables
     urllib3
@@ -47,7 +48,7 @@ test =
     mypy
     pyyaml
     pytest==5.3.5
-    pytest-cases
+    pytest-cases<2
     pytest-cov
     pytest-mock
     pytest-rerunfailures
