chores(test): fix missing import and yaml loading error for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,13 @@ test =
     pytest-mock
     pytest-rerunfailures
     pytest-sugar
+    openpyxl
+    types-PyYAML
+    types-chardet
+    types-paramiko
+    types-certifi
+    types-dataclasses
+    types-python-slugify
 
 [flake8]
 inline-quotes = single
