chore(deps): bump xlrd
closes #39

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     s3fs==0.4.0
     tables
     urllib3
-    xlrd<2  # when pandas 1.2.0 is out, try with xlrd 2 + openpyxl ?
+    xlrd
     xmltodict
 
 [options.packages.find]
