chore(deps): bump s3fs

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
     pyjq
     python-slugify
     python-snappy
-    s3fs==0.4.0
+    s3fs
     tables
     urllib3
     xlrd
@@ -39,6 +39,7 @@ include =
 [options.extras_require]
 test =
     black
+    boto3
     docker
     flake8
     flake8-quotes
