--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ target-version = ["py38"]
 line-length = 100
 skip-string-normalization = true
 
+[tool.isort]
+profile = "black"
+combine_as_imports = true
+
 [tool.mypy]
 python_version = "3.8"
 plugins = "pydantic.mypy"
