--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ xmltodict = "^0.12.0"
 s3fs = "^2022.1.0"
 
 [tool.poetry.dev-dependencies]
+aiobotocore = {extras = ["boto3"], version = "^2.1.0"}
 black = "^21.12b0"
 docker = "^5.0.3"
 flake8 = "^4.0.1"
