--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ flake8-quotes = "^3.3.1"
 isort = "^5.10.1"
 mypy = "^0.931"
 openpyxl = "^3.0.9"
+pre-commit = "^2.17.0"
 pytest = "5.3.5"
 pytest-cases = "<2"
 pytest-cov = "^3.0.0"
