--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,36 +3,44 @@ name: CI
 on: [push]
 
 jobs:
-  run:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: install_system_deps
+        run: sudo make install_system_deps
+      - name: install
+        run: make install
+      - name: lint
+        run: make lint
+      - name: mypy
+        run: make mypy
+
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8']
-
+        python-version:
+          - '3.8'
+          - '3.9'
+          - '3.10'
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: install_system_deps
       run: sudo make install_system_deps
-
     - name: install
       run: make install
-
-    - name: lint
-      run: make lint
-
     - name: test
       run: make test
       env:
         FTP_PATH: ${{ secrets.FTP_PATH }}
-
-    - name: mypy
-      run: make mypy
-
-    - name: coverage
-      run: pip install codecov && codecov --token=556fb2ac-7fe9-4798-9d58-ad3f22be4aca
+    - name: Upload coverage
+      uses: codecov/codecov-action@v2.1.0
