--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ fastparquet = "^0.7.2"
 pandas = "^1.4.0"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
-pyjq = "^2.5.2"
+pyjq = { git = "https://github.com/PrettyWood/pyjq.git", branch = "support-310" }
 python-slugify = "^5.0.2"
 python-snappy = "^0.6.0"
 tables = "^3.7.0"
