--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ isort = "^5.10.1"
 mypy = "^0.931"
 openpyxl = "^3.0.9"
 pre-commit = "^2.17.0"
-pytest = "5.3.5"
+pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 pytest-mock = "^3.6.1"
 pytest-rerunfailures = "^10.2"
