--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,22 @@ combine_as_imports = true
 python_version = "3.10"
 plugins = "pydantic.mypy"
 pretty = true
-follow_imports = "silent"
+allow_redefinition = false
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
 ignore_missing_imports = true
-allow_redefinition = true
+implicit_reexport = false
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_no_return = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_return_any = true
+warn_unreachable = true
+show_error_codes = true
+show_column_numbers = true
+show_error_context = true
+follow_imports = "silent"
