--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,6 @@ check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
 ignore_missing_imports = true
-implicit_reexport = false
 strict_optional = true
 strict_equality = true
 no_implicit_optional = true
@@ -94,4 +93,5 @@ warn_unreachable = true
 show_error_codes = true
 show_column_numbers = true
 show_error_context = true
+implicit_reexport = true
 follow_imports = "silent"
