--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ types-dataclasses = "^0.6.4"
 types-paramiko = "^2.8.10"
 types-python-slugify = "^5.0.3"
 types-PyYAML = "^6.0.3"
+typing-extensions = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
