--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
 ignore_missing_imports = true
+implicit_reexport = false
 strict_optional = true
 strict_equality = true
 no_implicit_optional = true
