--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ allow_redefinition = false
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
 ignore_missing_imports = true
 implicit_reexport = false
 strict_optional = true
