--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,3 +98,7 @@ warn_unreachable = true
 show_error_codes = true
 show_column_numbers = true
 show_error_context = true
+
+[[tool.mypy.overrides]]
+module = "peakina.*"
+disallow_untyped_defs = true
