--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ types-dataclasses = "^0.6.4"
 types-paramiko = "^2.8.10"
 types-python-slugify = "^5.0.3"
 types-PyYAML = "^6.0.3"
+typing-extensions = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -76,6 +77,34 @@ combine_as_imports = true
 python_version = "3.10"
 plugins = "pydantic.mypy"
 pretty = true
-follow_imports = "silent"
+allow_redefinition = false
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
 ignore_missing_imports = true
-allow_redefinition = true
+implicit_reexport = false
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_no_return = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_return_any = true
+warn_unreachable = true
+show_error_codes = true
+show_column_numbers = true
+show_error_context = true
+
+[[tool.mypy.overrides]]
+module = "peakina.*"
+disallow_untyped_defs = true
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:",
+]
