--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 python = "^3.8"
 certifi = "^2021.10.8"
 chardet = "^4.0.0"
-fastparquet = {git = "https://github.com/PrettyWood/fastparquet", rev = "add-3.10"}
+fastparquet = "^0.8.0"
 pandas = "^1.4.0"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
@@ -34,7 +34,6 @@ urllib3 = "^1.26.8"
 xlrd = "^2.0.1"
 xmltodict = "^0.12.0"
 s3fs = "^2022.1.0"
-cramjam = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 aiobotocore = {extras = ["boto3"], version = "^2.1.0"}
