--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ docker = "^5.0.3"
 flake8 = "^4.0.1"
 flake8-quotes = "^3.3.1"
 isort = "^5.10.1"
+mkdocs = "^1.2.3"
+mkdocs-material = "^8.1.8"
 mypy = "^0.931"
 openpyxl = "^3.0.9"
 pre-commit = "^2.17.0"
