--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,13 @@ jobs:
         FTP_PATH: ${{ secrets.FTP_PATH }}
     - name: Upload coverage
       uses: codecov/codecov-action@v2.1.0
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - run: pip install mkdocs-material
+      - run: mkdocs gh-deploy --force
