--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ python-snappy = "^0.6.0"
 s3fs = "^2022.1.0"
 tables = "^3.7.0"
 urllib3 = "^1.26.8"
-xlrd = "2.0.1"
+xlrd = "^2.0.1"
 xmltodict = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
