--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ certifi = "^2021.10.8"
 chardet = "^4.0.0"
 fastparquet = "^0.8.0"
 jq = "^1.2.1"
+openpyxl = "^3.0.9"
 pandas = "^1.2.5"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
@@ -44,7 +45,6 @@ isort = "^5.10.1"
 mkdocs = "^1.2.3"
 mkdocs-material = "^8.2.1"
 mypy = "^0.931"
-openpyxl = "^3.0.9"
 pre-commit = "^2.17.0"
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
@@ -52,14 +52,15 @@ pytest-mock = "^3.7.0"
 pytest-rerunfailures = "^10.2"
 pytest-sugar = "^0.9.4"
 PyYAML = "^6.0"
+typing-extensions = "^4.1.1"
 
+# types
 types-chardet = "^4.0.3"
 types-certifi = "^2021.10.8"
 types-dataclasses = "^0.6.4"
 types-paramiko = "^2.8.12"
 types-python-slugify = "^5.0.3"
 types-PyYAML = "^6.0.4"
-typing-extensions = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
