build(deps): unpin pandas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ chardet = "^4.0.0"
 fastparquet = "^0.8.0"
 jq = "^1.2.1"
 openpyxl = "^3.0.9"
-pandas = "1.2.5"
+pandas = "^1.4.2"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
 python-slugify = ">=5.0.2,<7.0.0"
