--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ tables = "^3.7.0"
 urllib3 = "^1.26.8"
 xlrd = "^2.0.1"
 xmltodict = "^0.12.0"
+geopandas = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 aiobotocore = {extras = ["boto3"], version = "^2.1.0"}
