--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "peakina"
-version = "0.8.2"
+version = "0.7.16"
 description = "pandas readers on steroids (remote files, glob patterns, cache, etc.)"
 authors = ["Toucan Toco <dev@toucantoco.com>"]
 readme = "README.md"
@@ -25,7 +25,7 @@ chardet = "^4.0.0"
 fastparquet = "^0.8.0"
 jq = "^1.2.1"
 openpyxl = "^3.0.9"
-pandas = "^1.4.2"
+pandas = "1.2.5"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
 python-slugify = ">=5.0.2,<7.0.0"
