--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,20 +22,20 @@ classifiers = [
 python = "^3.8"
 certifi = ">=2022.5.18,<2023.0.0"
 chardet = "^4.0.0"
-fastparquet = "^0.8.0"
+fastparquet = ">=0.8.0,<1"
 jq = "^1.2.1"
 openpyxl = "^3.0.9"
 pandas = "^1.4.2"
 paramiko = "^2.9.2"
 pydantic = "^1.9.0"
 python-slugify = ">=5.0.2,<7.0.0"
-python-snappy = "^0.6.0"
+python-snappy = ">=0.6.0,<1"
 s3fs = "^2022.1.0"
 tables = "^3.7.0"
 urllib3 = "^1.26.8"
 xlrd = "^2.0.1"
-xmltodict = "^0.12.0"
-geopandas = "^0.10.2"
+xmltodict = ">=0.12.0,<1"
+geopandas = ">=0.10.2,<1"
 
 [tool.poetry.dev-dependencies]
 aiobotocore = {extras = ["boto3"], version = "^2.1.0"}
@@ -51,14 +51,14 @@ pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 pytest-mock = "^3.7.0"
 pytest-rerunfailures = "^10.2"
-pytest-sugar = "^0.9.4"
+pytest-sugar = ">=0.9.4,<1"
 PyYAML = "^6.0"
 typing-extensions = "^4.1.1"
 
 # types
 types-chardet = "^4.0.3"
 types-certifi = "^2021.10.8"
-types-dataclasses = "^0.6.4"
+types-dataclasses = ">=0.6.4,<1"
 types-paramiko = "^2.8.12"
 types-python-slugify = "^5.0.3"
 types-PyYAML = "^6.0.6"
