--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.10.6"
 certifi = ">=2022.5.18,<2023.0.0"
 chardet = ">=4,<6"
 fastparquet = ">=0.8.0,<1"
@@ -73,7 +73,9 @@ profile = "black"
 combine_as_imports = true
 
 [tool.mypy]
-python_version = "3.10"
+# Since a fix is comming (v0.980), we can have this workaround for now from :
+# https://github.com/python/mypy/issues/13627
+python_version = "3.10.6"
 plugins = "pydantic.mypy"
 pretty = true
 allow_redefinition = false
