--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          # FIXME: remove the .6 minor once we're on mypy>=0.981 (JSON metadata not available on PyPI for now)
+          python-version: "3.10.6"
       - name: install_system_deps
         run: sudo make install_system_deps
       - name: install
