chore: Set up dependabot on LTS branch
Signed-off-by: Luka Peschke <luka.peschke@toucantoco.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  # poetry
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "daily"
+  # poetry LTS
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    target-branch: "release/v0.9"
