--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,23 +17,22 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 certifi = ">=2022.5.18,<2023.0.0"
 chardet = ">=4,<6"
-fastparquet = ">=0.8.0,<2024"
 jq = "^1.2.1"
-openpyxl = "^3.0.9"
-pandas = ">=1.4.2,<3.0.0"
+pandas = ">=1.5.3,<3.0.0"
 paramiko = ">=2.9.2,<4.0.0"
 pydantic = "^1.9.0"
 python-slugify = ">=5.0.2,<9.0.0"
-python-snappy = ">=0.6.0,<1"
 s3fs = "^2022.1.0"
 tables = "^3.7.0"
 urllib3 = "^1.26.8"
 xlrd = "^2.0.1"
 xmltodict = ">=0.12.0,<1"
 geopandas = ">=0.11.1,<1"
+pyarrow = "^11.0.0"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 aiobotocore = {extras = ["boto3"], version = "^2.3.4"}
