--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,13 +14,8 @@ repos:
     types: [python]
     language: system
   - id: system
-    name: isort
-    entry: poetry run isort
-    types: [python]
-    language: system
-  - id: system
-    name: flake8
-    entry: poetry run flake8 peakina tests
+    name: Lint with Ruff
+    entry: ruff
     types: [python]
     language: system
   - id: mypy
