--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,7 @@ openpyxl = "^3.1.2"
 aiobotocore = {extras = ["boto3"], version = "^2.3.4"}
 black = "^23.9"
 docker = "^6.1.3"
-flake8 = "^6.1.0"
-isort = "^5.12.0"
+ruff = "^0.0.289"
 mkdocs = "^1.5.2"
 mkdocs-material = "^9.3.1"
 mypy = "^1.5"
@@ -62,14 +61,6 @@ types-PyYAML = "^6.0.12"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-target-version = ["py310"]
-line-length = 100
-
-[tool.isort]
-profile = "black"
-combine_as_imports = true
 
 [tool.mypy]
 python_version = "3.10"
@@ -105,4 +96,36 @@ disallow_untyped_defs = true
 exclude_lines = [
     "pragma: no cover",
     "if TYPE_CHECKING:",
+]
+
+[tool.ruff]
+# a bit longer to allow for some lines which black would not wrap
+line-length = 120
+select = ["E", "F", "UP", "N", "C", "B", "I001", "S"]
+ignore = [
+       "S101", # allow use of assert
+       "C901", # do not check complexity
+       "S311", # allow use of `random` module (non-cyptographic)
+       "N815", # allow mixed case (pydantic models)
+       "N818", # allow exceptions that do not end with the `Error` suffix
+       "S106", # allow Possible hardcoded password assigned (on tests only)
+       "S321", # allow FTP-related functions to be called. normally FTP is considered insecure
+       "S324", # allow Probable use of insecure hash functions in `hashlib`: `md5`
+       "B026", # allow Star-arg unpacking after a keyword argument
+]
+
+# Exclude a variety of commonly ignored directories.
+exclude = [".git", ".direnv"]
+# Assume Python 3.10.
+target-version = "py310"
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+
+[tool.ruff.pep8-naming]
+# Allow a few decorators to trigger class method treatment.
+classmethod-decorators = [
+    "classmethod",
+    "pydantic.validator",
+    "pydantic.root_validator",
 ]
