--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-certifi = ">=2022.5.18,<2024.0.0"
+certifi = "*"
 chardet = ">=4,<6"
 jq = "^1.2.1"
 pandas = ">=1.5.3,<3.0.0"
