--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ chardet = ">=4,<6"
 jq = "^1.2.1"
 pandas = ">=1.5.3,<3.0.0"
 paramiko = ">=2.9.2,<4.0.0"
-pydantic = ">=1.9,<3.0"
+pydantic = "^2.4.2"
 python-slugify = ">=5.0.2,<9.0.0"
 s3fs = ">=2022.1,<2024.0"
 tables = "^3.7.0"
