--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,13 +61,11 @@ types-PyYAML = "^6.0.12"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.black]
-target-version = ["py310"]
+[tool.ruff]
+# Assume python 3.10
+target-version = "py310"
 line-length = 100
-
-[tool.isort]
-profile = "black"
-combine_as_imports = true
+exclude = ["__init__.py", ".git", ".direnv"]
 
 [tool.mypy]
 python_version = "3.10"
