fix(deps): pin ruff ^0.6.1
Signed-off-by: Luka Peschke <luka.peschke@toucantoco.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ pytest-mock = "^3.14.0"
 pytest-rerunfailures = "^14.0"
 pytest-sugar = ">=0.9.4,<2"
 PyYAML = "^6.0"
-ruff = ">=0.4.9,<0.7.0"
+ruff = "^0.6.1"
 
 # types
 types-chardet = "^5.0.4"
