--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,29 @@
-[tool.poetry]
+[project]
 name = "peakina"
 version = "0.15.0"
+authors = [
+    {name = "Toucan Toco", email = "dev@toucantoco.com"},
+]
+license = {text = "BSD-3-Clause"}
+requires-python = "<4.0,>=3.10"
+dependencies = [
+    "certifi",
+    "chardet<6,>=4",
+    "jq<2.0.0,>=1.2.1",
+    "pandas<3.0.0,>=1.5.3",
+    "paramiko<4.0.0,>=2.9.2",
+    "pydantic<3.0.0,>=2.4.2",
+    "python-slugify<9.0.0,>=5.0.2",
+    "s3fs<2025.0,>=2022.1",
+    "urllib3<3.0.0,>=1.26.8",
+    "xlrd<3.0.0,>=2.0.1",
+    "xmltodict<1,>=0.12.0",
+    "geopandas<2,>=1.0.0",
+    "pyarrow<20,>=11",
+    "openpyxl<4.0.0,>=3.1.2",
+]
 description = "pandas readers on steroids (remote files, glob patterns, cache, etc.)"
-authors = ["Toucan Toco <dev@toucantoco.com>"]
 readme = "README.md"
-homepage = "https://github.com/ToucanToco/peakina"
-documentation = "https://toucantoco.github.io/peakina"
-repository = "https://github.com/ToucanToco/peakina"
-license = "BSD-3-Clause"
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: BSD License",
@@ -19,49 +35,36 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-certifi = "*"
-chardet = ">=4,<6"
-jq = "^1.2.1"
-pandas = ">=1.5.3,<3.0.0"
-paramiko = ">=2.9.2,<4.0.0"
-pydantic = "^2.4.2"
-python-slugify = ">=5.0.2,<9.0.0"
-s3fs = ">=2022.1,<2025.0"
-urllib3 = ">=1.26.8,<3.0.0"
-xlrd = "^2.0.1"
-xmltodict = ">=0.12.0,<1"
-geopandas = ">=1.0.0,<2"
-pyarrow = ">=11,<20"
-openpyxl = "^3.1.2"
+[project.urls]
+homepage = "https://github.com/ToucanToco/peakina"
+repository = "https://github.com/ToucanToco/peakina"
+documentation = "https://toucantoco.github.io/peakina"
 
-[tool.poetry.group.dev.dependencies]
-aiobotocore = {extras = ["boto3"], version = "^2.3.4"}
-docker = "^7.1.0"
-mkdocs = "^1.5.3"
-mkdocs-material = "^9.5.18"
-mypy = "^1.10"
-pre-commit = ">=3.7.1,<5.0.0"
-pytest = "^8.2.2"
-pytest-cov = ">=5,<7"
-pytest-mock = "^3.14.0"
-pytest-rerunfailures = ">=14,<16"
-pytest-sugar = ">=0.9.4,<2"
-PyYAML = "^6.0"
-ruff = ">=0.6.1,<0.10.0"
+[dependency-groups]
+dev = [
+    "aiobotocore[boto3]<3.0.0,>=2.3.4",
+    "docker<8.0.0,>=7.1.0",
+    "mkdocs<2.0.0,>=1.5.3",
+    "mkdocs-material<10.0.0,>=9.5.18",
+    "mypy<2.0,>=1.10",
+    "pre-commit<5.0.0,>=3.7.1",
+    "pytest<9.0.0,>=8.2.2",
+    "pytest-cov<7,>=5",
+    "pytest-mock<4.0.0,>=3.14.0",
+    "pytest-rerunfailures<16,>=14",
+    "pytest-sugar<2,>=0.9.4",
+    "PyYAML<7.0,>=6.0",
+    "ruff<0.10.0,>=0.6.1",
+    "types-chardet<6.0.0,>=5.0.4",
+    "types-certifi<2022.0.0,>=2021.10.8",
+    "types-dataclasses<1,>=0.6.4",
+    "types-paramiko<4.0.0,>=3.4.0",
+    "types-python-slugify<9.0.0,>=8.0.2",
+    "types-PyYAML<7.0.0,>=6.0.12",
+]
 
-# types
-types-chardet = "^5.0.4"
-types-certifi = "^2021.10.8"
-types-dataclasses = ">=0.6.4,<1"
-types-paramiko = "^3.4.0"
-types-python-slugify = "^8.0.2"
-types-PyYAML = "^6.0.12"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+package = true
 
 [tool.ruff]
 # Assume python 3.10
