fix(build): bypass "license-file introduced in metadata version 2.4, not 2.2" PyPI error
Signed-off-by: Luka Peschke <luka.peschke@toucantoco.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ dev = [
     "types-PyYAML<7.0.0,>=6.0.12",
 ]
 
+# FIXME: temporary workaround until https://github.com/pypa/setuptools/issues/4759 is fixed
+[tool.setuptools]
+license-files = []
+
 [tool.uv]
 package = true
 
