--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    // "schedule:earlyMondays"
+    "schedule:earlyMondays"
   ],
   "packageRules": [
     {
