--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.10"
+          - "3.13"
 
     steps:
       - uses: actions/checkout@v5
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install uv
         env:
-          UV_VERSION: "0.8.3"
+          UV_VERSION: "0.8.12"
         run: |
           curl -LsSf "https://astral.sh/uv/${UV_VERSION}/install.sh" | sh
 
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.13']
 
     steps:
     - uses: actions/checkout@v5
@@ -53,7 +53,7 @@ jobs:
 
     - name: Install uv
       env:
-        UV_VERSION: "0.8.3"
+        UV_VERSION: "0.8.12"
       run: |
         curl -LsSf "https://astral.sh/uv/${UV_VERSION}/install.sh" | sh
 
